--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-fetch": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
